# crabflow

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  requirements.txt
.cargo/: config.toml
.github/workflows/: build-publish-py.yml  build-test.yml  build.yml  docker.yml  lint.yml  pre-commit.yml  publish-release.yml  release.yml  test.yml
builder/: Cargo.toml  build.rs
builder/resources/main/: Dockerfile.liquid
builder/src/: builder.rs  cargo.rs  cmd.rs  docker.rs  main.rs  renderer.rs  watcher.rs
common/: Cargo.toml
common/resources/main/db/migrations/: 0_init.sql
common/resources/main/db/queries/: all-workflows.sql  delete-workflow.sql  insert-workflow-loading.sql  insert-workflow.sql  update-workflow-safely.sql  update-workflow.sql  workflow-by-target.sql
common/src/: clap.rs  db.rs  lib.rs
core/: Cargo.toml
core/src/: lib.rs
crabflow/: Cargo.toml
crabflow-core/src/: lib.rs
crabflow-derive/: Cargo.toml
crabflow-derive/src/: lib.rs  old.rs
crabflow-dsl/: Cargo.toml
crabflow/src/: lib.rs
dsl/: Cargo.toml
dsl/src/: lib.rs
examples/: Cargo.toml  python.py  tokio.rs
examples/.cargo/: config.toml
examples/src/: lib.rs
git-synchronizer/: Cargo.toml
git-synchronizer/src/: git.rs  main.rs
helm/crabflow/: Chart.yaml  values.yaml
helm/crabflow/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/crabflow/templates/builder/: deployment.yaml  hpa.yaml
helm/crabflow/templates/tests/: test-connection.yaml
image-builder/: Cargo.toml
image-builder/resources/main/: Dockerfile.liquid
image-builder/src/: builder.rs  main.rs
macros/: Cargo.toml
macros/src/: lib.rs
migrator/: Cargo.toml
migrator/resources/main/db/migrations/: 0_init.sql
migrator/src/: main.rs
scheduler/: Cargo.toml
scheduler/resources/main/k8s/: pod-template.yaml
scheduler/src/: executor.rs  main.rs  scheduler.rs
sh/: recreate-db.sh  run.sh
src/: lib.rs  py.rs  tokio.rs
