[dependencies]
clap = {version = "4", features = ["derive", "env"]}
crabflow-common = {path = "../common", features = ["clap", "db"]}
crabflow-core = {path = "../core"}
liquid = "0"
notify = "6"
notify-debouncer-full = "0"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"
tokio = {version = "1", features = ["full"]}
tracing = "0"

[package]
description = "Builds image of CrabFlow workflows"
name = "crabflow-builder"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
