[dependencies]
chrono = "0"
clap = {version = "4", features = ["derive"], optional = true}
crabflow-core = {path = "../core", features = ["db"], optional = true}
futures = {version = "0", optional = true}
serde_json = {version = "1", optional = true}
sqlx = {version = "0", features = ["chrono", "postgres", "runtime-tokio"], optional = true}
thiserror = {version = "1", optional = true}
tokio = {version = "1", features = ["signal"]}
tracing = "0"
tracing-subscriber = {version = "0", features = ["env-filter"]}

[features]
clap = ["dep:clap"]
db = ["dep:crabflow-core", "dep:futures", "dep:serde_json", "dep:sqlx", "dep:thiserror"]

[package]
description = "Common utilities between CrabFlow crates"
name = "crabflow-common"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
