[dependencies]
serde = {version = "1", features = ["derive"]}

[package]
description = "CrabFlow core library"
name = "crabflow-core"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
