[dependencies]
chrono = "0"
serde = {version = "1", features = ["derive"]}
sqlx = {version = "0", optional = true}

[features]
db = ["dep:sqlx"]

[package]
description = "CrabFlow core library"
name = "crabflow-core"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
