[dependencies]
chrono = "0"
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1", optional = true}
sqlx = {version = "0", features = ["json", "postgres"], optional = true}

[features]
db = ["dep:serde_json", "dep:sqlx"]

[package]
description = "CrabFlow core library"
name = "crabflow-core"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
