[dependencies]
clap = {version = "4", features = ["env", "derive"]}
crabflow-core = {path = "../crabflow-core"}
crabflow-derive = {path = "../crabflow-derive"}

[package]
description = "CrabFlow crate"
name = "crabflow"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
