[dependencies]
anyhow = "1"
clap = {version = "4", features = ["env", "derive"]}
crabflow-common = {path = "../common", features = ["clap", "db"]}
crabflow-core = {path = "../core"}
crabflow-dsl = {path = "../dsl"}
serde_json = "1"
thiserror = "1"
tokio = {version = "1", features = ["full"]}
tracing = "0"

[package]
description = "CrabFlow crate"
name = "crabflow"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
