[dependencies]
clap = {version = "4", features = ["derive", "env"]}
crabflow-common = {path = "../common"}
git2 = {version = "0", features = ["vendored-openssl"]}
signal-hook = "0"
thiserror = "1"
tracing = "0"

[package]
description = "Synchronizes crabflow workflows"
name = "crabflow-git-synchronizer"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
