[dependencies]
clap = {version = "4", features = ["derive", "env"]}
crabflow-common = {path = "../common"}
liquid = "0"
notify = "6"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
signal-hook = "0"
thiserror = "1"
tracing = "0"

[package]
description = "Builds image of CrabFlow workflows"
name = "crabflow-image-builder"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
