[dependencies]
crabflow-core = {path = "../core"}
proc-macro2 = "1"
quote = "1"
serde_json = "1"
syn = {version = "2", features = ["full"]}

[features]
internal = []

[lib]
proc-macro = true

[package]
description = "CrabFlow macros"
name = "crabflow-macros"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
