[dependencies]
clap = {version = "4", features = ["derive", "env"]}
crabflow-common = {path = "../common", features = ["db"]}
crabflow-macros = {path = "../macros", features = ["internal"]}
thiserror = "1"
tokio = {version = "1", features = ["full"]}
tracing = "0"

[package]
description = "Runs CrabFlow database migrations"
name = "crabflow-migrator"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
