[dependencies]
clap = {version = "4", features = ["derive", "env"]}
crabflow-common = {path = "../common", features = ["clap", "db"]}
thiserror = "1"
tokio = {version = "1", features = ["full"]}
tracing = "0"

[package]
description = "Schedule CrabFlow workflows"
name = "crabflow-scheduler"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
