[dependencies]
clap = {version = "4", features = ["derive", "env"]}
crabflow-common = {path = "../common", features = ["db"]}
crabflow-core = {path = "../core"}
crabflow-macros = {path = "../macros", features = ["internal"]}
futures = "0"
k8s-openapi = {version = "0", features = ["latest"]}
kube = "0"
mockable = {version = "3", features = ["uuid"]}
serde_yaml = "0"
thiserror = "1"
tokio = {version = "1", features = ["full"]}
tracing = "0"

[package]
description = "Schedule CrabFlow workflows"
name = "crabflow-scheduler"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
